# obj-recog

./: .gitignore  DepthCamera_2026-03-11-10-19-15.json  README.md  pyproject.toml
calibration/: calibration.yaml
docs/plans/: 2026-03-09-object-recognition-dense-map-only.md  2026-03-10-3d-mesh-segment-coloring.md  2026-03-12-dotenv-camera-calibration-design.md  2026-03-12-dotenv-camera-calibration.md  2026-03-12-explanation-auto-refresh.md  2026-03-12-explanation-refresh-status-design.md  2026-03-12-explanation-refresh-status.md  2026-03-12-missing-camera-calibration-target-design.md  2026-03-12-missing-camera-calibration-target.md  2026-03-13-blender-realtime-photoreal-design.md  2026-03-13-blender-realtime-photoreal.md  2026-03-13-environment-model-sprite-design.md  2026-03-13-environment-model-sprite.md  2026-03-13-environment-open3d-view-design.md  2026-03-13-environment-open3d-view.md  2026-03-13-interior-test-tv-scenario-design.md  2026-03-13-interior-test-tv-scenario.md  2026-03-13-living-room-natural-background-design.md  2026-03-13-living-room-natural-background.md  2026-03-13-living-room-procedural-furniture-design.md  2026-03-13-living-room-procedural-furniture.md  2026-03-13-photoreal-asset-mesh-design.md  2026-03-13-photoreal-asset-mesh.md
native/orbslam3_bridge/: CMakeLists.txt  bridge_main.cpp
reports/: debug-studio-seed7-multi.json  debug-studio_open_v1-coverage.json  debug-warehouse-seed7-fullcoverage.json  debug-warehouse-seed7-multi.json  debug-warehouse-seed7.json  debug-warehouse_moving_target_v1-coverage.json  manual-photoreal-sim-check.json  studio_open_v1-seed7.json  warehouse_moving_target_v1-seed7.json
reports/blender-worker-check/: frame-0000-depth.npy  frame-0000-instance.npy  frame-0000-semantic.npy  frame-0000.npy
reports/blender_manifest_debug/: studio_open_v1-92f6228c9108-scene.json  warehouse_moving_target_v1-61791ef984a2-scene.json
reports/debug-interior-worker/: frame-0000-depth.npy  frame-0000-instance.npy
reports/debug-interior-worker-verify/: frame-0000-semantic.npy
reports/debug-interior-worker-verify-fresh/: frame-0000.npy
reports/orb-check/: frame-0001.npy  frame-0002-depth.npy  frame-0002-instance.npy  frame-0002-semantic.npy  frame-0002.npy
reports/orb-grid/: frame-0001-depth.npy  frame-0001-instance.npy  frame-0001-semantic.npy  frame-0001.npy  frame-0002-depth.npy  frame-0002-instance.npy  frame-0002-semantic.npy  frame-0002.npy  frame-0003-depth.npy  frame-0003-instance.npy  frame-0003-semantic.npy  frame-0003.npy  frame-0004-depth.npy  frame-0004-instance.npy  frame-0004-semantic.npy  frame-0004.npy  frame-0005-depth.npy  frame-0005-instance.npy  frame-0005-semantic.npy  frame-0005.npy
reports/tracker-check/: frame-0000-semantic.npy  frame-0001-semantic.npy
reports/tracker-check-2/: frame-0001.npy
reports/tracker-check-simdefaults/: frame-0000-depth.npy  frame-0000-instance.npy  frame-0001-instance.npy  frame-0001-semantic.npy
reports/tracker-large-step-check/: frame-0001-depth.npy  frame-0001-instance.npy  frame-0001-semantic.npy  frame-0001.npy
reports/tracker-smallmotion-check/: frame-0001-depth.npy  frame-0001-instance.npy  frame-0001-semantic.npy  frame-0001.npy
reports/tracker-threshold-check/: frame-0001-depth.npy  frame-0001-instance.npy
reports/tracker-threshold-scan/: frame-0001-depth.npy
scripts/: build_orbslam3_bridge.sh  build_orbslam3_bridge_windows.ps1  build_unity_macos.sh  build_unity_windows.bat  fetch_orbslam3.sh  install_opencv_cuda_windows.ps1  verify_opencv_cuda.py
scripts/blender/: asset_bootstrap_worker.py  extract_scene_manifest.py  realtime_worker.py
src/obj_recog/: __init__.py  array_transport.py  asset_bootstrap.py  auto_calibrate.py  auto_calibration.py  blend_scene_loader.py  blender_worker.py  calibrate.py  calibration.py  camera.py  config.py  depth.py  detector.py  frame_source.py  main.py  mapping.py  metric_stabilization.py  offline_benchmark.py  opencv_runtime.py  procedural_assets.py  reconstruct.py  render_worker.py  runtime_accel.py  scene_graph.py  segmenter.py  sim_assets.py  sim_materials.py  sim_planner.py  sim_protocol.py  sim_scene.py  simulation.py  situation_explainer.py  slam_bridge.py  temporal_stereo.py  tracking.py  (+5 more)
tests/: test_asset_bootstrap.py  test_auto_calibration.py  test_blend_scene_loader.py  test_blender_worker.py  test_calibration.py  test_camera.py  test_config.py  test_dense_mapping.py  test_depth.py  test_detector.py  test_frame_source.py  test_living_room_episode_integration.py  test_living_room_runtime.py  test_main_simulation.py  test_main_smoke.py  test_mapping.py  test_offline_benchmark.py  test_opencv_runtime.py  test_procedural_assets.py  test_project_metadata.py  test_realtime_worker_script.py  test_reconstruct.py  test_render_worker.py  test_scene_graph.py  test_segmenter.py  test_sim_assets.py  test_sim_planner.py  test_sim_scene.py  test_simulation.py  test_situation_explainer.py  test_slam_bridge.py  test_temporal_stereo.py  test_tracking.py  test_tsdf_mapping.py  test_unity_project_files.py  test_unity_rgb.py  test_unity_vendor_check.py  test_validation.py  test_visualization.py  test_visualization_unicode.py
unity/: README.md  vendor_manifest.json
(+2114 files in other folders)
