[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obj-recog"
version = "0.1.0"
description = "Real-time object recognition and monocular 3D reconstruction demo"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "opencv-python",
  "open3d",
  "scipy",
  "timm",
  "torch",
  "transformers",
  "torchvision",
  "ultralytics",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
