[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obj-recog"
version = "0.1.0"
description = "Real-time object recognition and monocular 3D reconstruction demo"
requires-python = ">=3.11"
dependencies = [
  "networkx",
  "numpy",
  "openai",
  "opencv-python",
  "open3d",
  "python-dotenv",
  "scipy",
  "timm",
  "torch @ https://download.pytorch.org/whl/cu128/torch-2.10.0%2Bcu128-cp312-cp312-win_amd64.whl ; platform_system == 'Windows' and platform_machine == 'AMD64' and python_version >= '3.12' and python_version < '3.13'",
  "torch ; not (platform_system == 'Windows' and platform_machine == 'AMD64' and python_version >= '3.12' and python_version < '3.13')",
  "transformers",
  "torchvision @ https://download.pytorch.org/whl/cu128/torchvision-0.25.0%2Bcu128-cp312-cp312-win_amd64.whl ; platform_system == 'Windows' and platform_machine == 'AMD64' and python_version >= '3.12' and python_version < '3.13'",
  "torchvision ; not (platform_system == 'Windows' and platform_machine == 'AMD64' and python_version >= '3.12' and python_version < '3.13')",
  "ultralytics",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
